2015-12-06  Valentin Hilbig  <tino@build.03.softkill.net>

	* Makefile-tests.sh (run): Fix shell globbing bug (perhaps change
	again in future to use eval)

2015-12-06  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* data.h: changed "user" parameter to tino_data_user and added
	tino_data_user_NULL() and similar converter functions.

	* proc.h (tino_daemonize_pidOb): suppress waning with IGUR

	* debug.h (IGUR): added dummy to ignore things

2015-11-28  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* sysfix_osx.h (TINO_NO_O_DIRECT): added

	* Makefile-tests.sh (cmp-RUN): more escapes

	* xml.h (tino_xml_write): make "make test" happy

	* data.h (tino_data_user): using union instead of void pointer to
	make compiler happy.

	* sysfix.h: linux specfic things are now in sysfix_linux.h

	* sysfix_linux.h: added

	* sysfix_osx.h: added, this is yet a stub, as I do not have OS-X

2015-08-02  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* sbrk.h (tino_sbrk): argument now is long as it ought to be

2015-05-10  Valentin Hilbig  <tino@aragog.03.softkill.org>

	* Makefile.awk (appender): added way to add additional rules in
	Makefile.tino

2014-11-08  Valentin Hilbig  <tino@minotaurus.03.softkill.org>

	* alloc.h (tino_diet_posix_memalignU): a really bad routine,
	replaced by the deprecated "memalign()" now (because there is no
	viable good alternative).
	(tino_alloc_aligned_nO): added as alternative to posix_memalign()
	(tino_alloc_alignedO): now uses tino_alloc_aligned_nO()

	* sysfix_diet.h (posix_memalign): removed

2014-10-12  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* removed CVS tags and changed some files from GPL to CLL

	* setuptino.sh: Simplified, so it ow supports .git files, too

2014-08-30  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* ANNOUNCE.dist: now prepared for (my) GIT standard

2014-06-12  Valentin Hilbig  <tino@giganto.03.softkill.net>

	* buf.h: typo

2014-05-17  Valentin Hilbig  <tino@aragog.03.softkill.org>
